[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main Menu.gd" type="Script" id=1]
[ext_resource path="res://Vegetable Thief.tscn" type="PackedScene" id=2]

[node name="Main Menu" type="Node2D"]
script = ExtResource( 1 )
game = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 15.9995, 12 )
color = Color( 0.12549, 0.564706, 0.141176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 120.0
margin_top = 120.0
margin_right = 520.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 400.0
margin_bottom = 240.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 118.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Vegetable Thief"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 400.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
margin_right = 400.0
margin_bottom = 36.0
text = "New Game"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 400.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
margin_right = 400.0
margin_bottom = 37.0
text = "Credits"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 400.0
margin_bottom = 118.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
margin_right = 400.0
margin_bottom = 37.0
text = "Exit"

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/Start" to="." method="_on_Start_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/Credits" to="." method="_on_Credits_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/Exit" to="." method="_on_Exit_button_up"]
